Fix vertical spacing, margins for chip reveal view

--- a/frontend/src/components/stages/chip_reveal_view.scss
+++ b/frontend/src/components/stages/chip_reveal_view.scss
@@ -3,10 +3,19 @@
 
 :host {
   @include common.flex-column;
+  gap: common.$spacing-large;
 }
 
 h2 {
   @include typescale.title-medium;
+  margin: 0;
+}
+
+h3 {
+  margin: 0;
+}
+
+p {
   margin: 0;
 }
 
@@ -15,7 +24,6 @@ h2 {
 }
 
 .description {
-  margin-top: -10;
   font-style: italic;
 }
 
